# src/shared/api/contract.ts
@@ -26,3 +26,8 @@ export type WalletView = Schemas['WalletView'];
 export type DeliveryType = Schemas['DeliveryType'];
 export type RegistrationRequest = Schemas['RegistrationRequest'];
 export type PolicyView = Schemas['PolicyView'];
+export type RulesView = Schemas['RulesView'];
+export type AdmissionView = Schemas['AdmissionView'];
+export type ExamView = Schemas['ExamView'];
+export type ExamQuestionView = Schemas['ExamQuestionView'];
+export type ExamResultView = Schemas['ExamResultView'];
